istio-ambient-demo/k8s/simple/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-demo
  labels:
    istio.io/dataplane-mode: ambient # 이 label 하나로 namespace 내 모든 Pod 가 ambient mesh 에 가입
